index.html ul list

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,31 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+<h2>Active Listings</h2>
 
-    TODO
+<ul>
+    <li>
+        <a href="category/Home">Home</a><br>
+        <a href="category/Home"><img src="{% static 'img/Home.png' %}"
+                alt="Home"></a><br>
+    </li>
+    <li>
+        <a href="category/Fashion">Fashion</a><br>
+        <a href="category/Fashion"><img src="{% static 'img/Fashion.png' %}"
+                alt="Fashion"></a><br>
+    </li>
+    <li>
+        <a href="category/Toys">Toys</a><br>
+        <a href="category/Toys"><img src="{% static 'img/Toys.png' %}"
+                alt='Toys'></a><br>
+    </li>
+    <li>
+        <a href="category/Electronics">Electronics</a><br>
+        <a href="category/Electronics"><img
+                src="{% static 'img/Electronics.png' %}"
+                alt="Electronics"></a><br>
+    </li>
+</ul>
+
 {% endblock %}
