index.html add teg <p>

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,28 +4,27 @@
 {% block body %}
 <h2>Active Listings</h2>
 
-<ul>
-    <li>
-        <a href="category/Home">Home</a><br>
-        <a href="category/Home"><img src="{% static 'img/Home.png' %}"
-                alt="Home"></a><br>
-    </li>
-    <li>
-        <a href="category/Fashion">Fashion</a><br>
-        <a href="category/Fashion"><img src="{% static 'img/Fashion.png' %}"
-                alt="Fashion"></a><br>
-    </li>
-    <li>
-        <a href="category/Toys">Toys</a><br>
-        <a href="category/Toys"><img src="{% static 'img/Toys.png' %}"
-                alt='Toys'></a><br>
-    </li>
-    <li>
-        <a href="category/Electronics">Electronics</a><br>
-        <a href="category/Electronics"><img
-                src="{% static 'img/Electronics.png' %}"
-                alt="Electronics"></a><br>
-    </li>
-</ul>
+
+<p><a href="category/Home">Home</a></p>
+<p><a href="category/Home"><img src="{% static 'img/Home.png' %}"
+            alt="Home"></a></p>
+
+
+<p><a href="category/Fashion">Fashion</a></p>
+<p><a href="category/Fashion"><img src="{% static 'img/Fashion.png' %}"
+            alt="Fashion"></a></p>
+
+
+<p><a href="category/Toys">Toys</a></p>
+<p><a href="category/Toys"><img src="{% static 'img/Toys.png' %}"
+            alt='Toys'></a></p>
+
+
+<p><a href="category/Electronics">Electronics</a></p>
+<p><a href="category/Electronics"><img
+            src="{% static 'img/Electronics.png' %}"
+            alt="Electronics"></a></p>
+
+
 
 {% endblock %}
