--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -22,7 +22,8 @@
         </div>
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+                <a class="nav-link" href="{% url 'my_auction' %}">Active
+                    Listings</a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
