--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -22,8 +22,9 @@
         </div>
         <ul class="nav">
             <li class="nav-item">
+
                 <a class="nav-link" href="{% url 'my_auction' %}">Active
-                    Listings</a>
+                    Listings {{quantity}}</a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
