--- a/auctions/templates/auctions/auction.html
+++ b/auctions/templates/auctions/auction.html
@@ -34,7 +34,7 @@
 {% if comments %}
 {% for comment in comments %}
 <div>
-<p>{{comment.author_comments}}</p>
+<p style="color:rgb(59, 125, 201) ;">{{comment.author_comments}}</p>
 <p style="width: 1000px; ;">{{comment.comments}}</p>
 <p>{{comment.date_comm}}</p>
 <hr>
