--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,4 +1,26 @@
+.selector-for-some-widget {
+    box-sizing: content-box;
+}
+
 body {
     padding: 10px;
-    background-color: blueviolet;
+    background-color: #f5f9fa;
+
+}
+
+input[type=text] {
+    border: 2px solid rgb(37, 159, 180);
+    border-radius: 4px;
+    width: 250px;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
 }
